# rusty-printer

./: .Cargo.toml.swp  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  openocd.gdb
.cargo/: config
printer-firmware/: Cargo.toml
printer-firmware/src/: main.rs
printer-firmware/src/gcode/: .mod.rs.swp  .processor.rs.swo  .processor.rs.swp  .queue.rs.swp  mod.rs  processor.rs  queue.rs
printer-firmware/src/platform/: .mod.rs.swp  .nucleo_f401re.rs.swp  disco_l475.rs  mod.rs  nucleo_f401re.rs
src/: main.rs
