[workspace]
members = ['printer-firmware']
exclude = ['gcode-rs']

[patch.crates-io]
async-gcode = { path = 'async-gcode' }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = "abort"
