[package]
authors = ["ithinuel"]
edition = "2018"
readme = "README.md"
name = "demo"
version = "0.1.0"

[features]
default = ["platform-nucleo-f401re"]
platform-nucleo-f401re = []
platform-duet-wifi = []

[dependencies]
cortex-m = "^0"
cortex-m-rt = "^0"
nb = "^0"
arrayvec = { version = "0.5.1", default-features = false }
stm32f4xx-hal = { version = "^0", features = ["stm32f401", "rt"] }
embedded-hal = { version = "^0", features = ["unproven"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"
panic-halt = "^0"
# panic-semihosting = "0.5.2"

[dependencies.gcode]
path = "../gcode-rs"
version = "^0"
default-features = false
features = ["parse-trailing-comment", "parse-checksum", "optional-value"]

# this lets you use `cargo fix`!
[[bin]]
name = "demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# panic = "abort"
