[package]
authors = ["ithinuel"]
edition = "2018"
readme = "README.md"
name = "demo"
version = "0.1.0"

[features]
default = ["platform-nucleo-f401re"]
platform-nucleo-f401re = []
platform-duet-wifi = []

[dependencies]
cortex-m = "^0"
cortex-m-rt = "^0"
nb = "^0"
arrayvec = { version = "0.5.1", default-features = false }
stm32f4xx-hal = { version = "^0", features = ["stm32f401", "rt"] }
embedded-hal = { version = "^0", features = ["unproven"] }
futures = { version = "0.3.5", default-features = false }
pin-utils = {_version = "*"}

alloc-cortex-m = {version = "*"}

# Uncomment for the panic example.
# panic-itm = "0.4.1"
panic-halt = "^0"
# panic-semihosting = "0.5.2"

[dependencies.gcode]
version = "^0"
default-features = false
features = ["parse-trailing-comment", "parse-checksum", "optional-value"]

# this lets you use `cargo fix`!
[[bin]]
name = "demo"
test = false
bench = false
