[package]
authors = ["ithinuel"]
edition = "2018"
readme = "README.md"
name = "printer-firmware"
version = "0.1.0"

[features]
default = ["platform-nucleo-f401re"]
platform-nucleo-f401re = ["stm32f4xx-hal"]
platform-disco-l475 = ["stm32l4xx-hal"]
platform-duet-wifi = []

[dependencies]
cortex-m = "^0"
cortex-m-rt = "^0"
nb = "^0"
arrayvec = { version = "0.5.1", default-features = false }
stm32f4xx-hal = { version = "^0", features = ["stm32f401", "rt"], optional = true }
stm32l4xx-hal = { version = "^0", features = ["stm32l4x5", "rt"], optional = true }
embedded-hal = { version = "^0", features = ["unproven"] }
futures = { version = "0.3.5", default-features = false }
pin-utils = "*"

# Uncomment for the panic example.
#panic-itm = "0.4.1"
panic-halt = "^0"
#panic-semihosting = "0.5.2"
#alloc_cortex_m = "*"

[dependencies.async-gcode]
version = "^0"
default-features = false
features = ["parse-trailing-comment", "parse-checksum", "optional-value"]

# this lets you use `cargo fix`!
[[bin]]
name = "printer-firmware"
test = false
bench = false
